# rust-on-docker-lambda

./: .gitignore  Cargo.toml  Dockerfile  README.jp.md  README.md  docker-compose.yml
src/: main.rs
