[package]
name = "rust_on_docker_lambda"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
aws_lambda_events = "0.13.1"
env_logger = "0.11.1"
http = "1.0.0"
lambda_runtime = "0.9.1"
log = "0.4.20"
serde_json = "1.0.113"
tokio = "1.36.0"

